; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bmake/extr_main.c_explode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bmake/extr_main.c_explode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @explode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @explode(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %58

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  store i8* %12, i8** %7, align 8
  br label %13

13:                                               ; preds = %24, %11
  %14 = load i8*, i8** %7, align 8
  %15 = load i8, i8* %14, align 1
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %13
  %18 = load i8*, i8** %7, align 8
  %19 = load i8, i8* %18, align 1
  %20 = call i32 @isalpha(i8 zeroext %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17
  br label %27

23:                                               ; preds = %17
  br label %24

24:                                               ; preds = %23
  %25 = load i8*, i8** %7, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 1
  store i8* %26, i8** %7, align 8
  br label %13

27:                                               ; preds = %22, %13
  %28 = load i8*, i8** %7, align 8
  %29 = load i8, i8* %28, align 1
  %30 = icmp ne i8 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %27
  %32 = load i8*, i8** %3, align 8
  %33 = call i8* @bmake_strdup(i8* %32)
  store i8* %33, i8** %2, align 8
  br label %58

34:                                               ; preds = %27
  %35 = load i8*, i8** %3, align 8
  %36 = call i64 @strlen(i8* %35)
  store i64 %36, i64* %4, align 8
  %37 = load i64, i64* %4, align 8
  %38 = mul i64 %37, 3
  %39 = add i64 %38, 1
  %40 = call i8* @bmake_malloc(i64 %39)
  store i8* %40, i8** %5, align 8
  store i8* %40, i8** %6, align 8
  br label %41

41:                                               ; preds = %45, %34
  %42 = load i8*, i8** %3, align 8
  %43 = load i8, i8* %42, align 1
  %44 = icmp ne i8 %43, 0
  br i1 %44, label %45, label %55

45:                                               ; preds = %41
  %46 = load i8*, i8** %5, align 8
  %47 = getelementptr inbounds i8, i8* %46, i32 1
  store i8* %47, i8** %5, align 8
  store i8 45, i8* %46, align 1
  %48 = load i8*, i8** %3, align 8
  %49 = getelementptr inbounds i8, i8* %48, i32 1
  store i8* %49, i8** %3, align 8
  %50 = load i8, i8* %48, align 1
  %51 = load i8*, i8** %5, align 8
  %52 = getelementptr inbounds i8, i8* %51, i32 1
  store i8* %52, i8** %5, align 8
  store i8 %50, i8* %51, align 1
  %53 = load i8*, i8** %5, align 8
  %54 = getelementptr inbounds i8, i8* %53, i32 1
  store i8* %54, i8** %5, align 8
  store i8 32, i8* %53, align 1
  br label %41

55:                                               ; preds = %41
  %56 = load i8*, i8** %5, align 8
  store i8 0, i8* %56, align 1
  %57 = load i8*, i8** %6, align 8
  store i8* %57, i8** %2, align 8
  br label %58

58:                                               ; preds = %55, %31, %10
  %59 = load i8*, i8** %2, align 8
  ret i8* %59
}

declare dso_local i32 @isalpha(i8 zeroext) #1

declare dso_local i8* @bmake_strdup(i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @bmake_malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
